[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["David <david.m.robertson1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scan_fmt = "0.2.5"
regex = "1.4.2"
lazy_static = "1.4.0"
petgraph = "0.5.1"
num_enum="0.5.1"