[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["David <david.m.robertson1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scan_fmt = "0.2.5"
regex = "1.4.2"
lazy_static = "1.4.0"
petgraph = "0.5.1"
num_enum="0.5.1"
num="0.3.1"
bimap="0.5.3"
array2d="0.2.1"
itertools = "0.9.0"
ndarray = "0.14.0"
strum = "0.20.0"
strum_macros = "0.20.1"